@@ -120,9 +120,13 @@
     <mockito.version>2.25.1</mockito.version>
     <pitest.version>1.3.2</pitest.version>
     <test.argline>-Djava.security.egd=file:/dev/./urandom</test.argline>
+    <test.jdk8.argline>${test.argline}</test.jdk8.argline>
+    <test.jdk9.argline>${test.argline} --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</test.jdk9.argline>
     <testng.parallel>tests</testng.parallel>
-    <testng.perCoreThreadCount>1</testng.perCoreThreadCount>
-    <testng.verbose>1</testng.verbose>
+    <testng.threadCount>2</testng.threadCount>
+    <testng.perCoreThreadCount>false</testng.perCoreThreadCount>
+    <testng.verbose>3</testng.verbose>
+    <testng.timeout>1200</testng.timeout>
   </properties>
   <groupId>io.github.pr0methean.betterrandom</groupId>
   <artifactId>BetterRandom-Java7</artifactId>
@@ -342,11 +346,10 @@
               <suiteXmlFile>src/test/testng-sequential.xml</suiteXmlFile>
             </suiteXmlFiles>
             <trimStackTrace>false</trimStackTrace>
-            <forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
-            <forkedProcessExitTimeoutInSeconds>600</forkedProcessExitTimeoutInSeconds>
             <parallel>${testng.parallel}</parallel>
-            <threadCount>${testng.perCoreThreadCount}</threadCount>
-            <perCoreThreadCount>true</perCoreThreadCount>
+            <threadCount>${testng.threadCount}</threadCount>
+            <perCoreThreadCount>${testng.perCoreThreadCount}</perCoreThreadCount>
+            <forkedProcessTimeoutInSeconds>${testng.timeout}</forkedProcessTimeoutInSeconds>
             <properties>
               <property>
                 <name>surefire.testng.verbose</name>
@@ -366,8 +369,9 @@
               <suiteXmlFile>src/test/testng-sequential.xml</suiteXmlFile>
             </suiteXmlFiles>
             <parallel>${testng.parallel}</parallel>
-            <threadCount>${testng.perCoreThreadCount}</threadCount>
-            <perCoreThreadCount>true</perCoreThreadCount>
+            <threadCount>${testng.threadCount}</threadCount>
+            <perCoreThreadCount>${testng.perCoreThreadCount}</perCoreThreadCount>
+            <forkedProcessTimeoutInSeconds>${testng.timeout}</forkedProcessTimeoutInSeconds>
             <properties>
               <property>
                 <name>surefire.testng.verbose</name>
@@ -485,6 +489,13 @@
           <configuration>
             <failOnServiceError>true</failOnServiceError>
           </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>javax.xml.bind</groupId>
+              <artifactId>jaxb-api</artifactId>
+              <version>2.3.1</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <!-- Required for com.github.github:site-maven-plugin -->
